[package]
name = "row"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.0"
console = "0.15.8"
env_logger = "0.11.3"
home = "0.5.9"
human_format = "1.1.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
memchr = "2.7.2"
nix = { version = "0.28.0", features = ["signal"] }
path-absolutize = "3.1.1"
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
signal-hook = { version = "0.3.17", default-features = false }
speedate = "0.14.0"
thiserror = "1.0.61"
toml = "0.8.13"
uuid = { version = "1.8.0", features = ["v4"] }
wildmatch = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = { version = "3.1.0", features = ["regex"] }
serial_test = "3.1.1"
