[package]
name = "row"
version = "0.3.0"
edition = "2021"
rust-version = "1.77"
description = "Row is a command line tool that helps you manage workflows on HPC resources."
homepage = "https://glotzerlab.engin.umich.edu"
documentation = "https://row.readthedocs.io"
readme = "README.md"
repository = "https://github.com/glotzerlab/row"
license = "BSD-3-Clause"
keywords = ["workflow", "slurm", "queue", "hpc", "cluster"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.2"
console = "0.15.8"
env_logger = "0.11.5"
home = "0.5.9"
human_format = "1.1.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
memchr = "2.7.4"
nix = { version = "0.29.0", features = ["signal"] }
path-absolutize = "3.1.1"
postcard = { version = "1.0.10", default-features = false, features = ["use-std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = { version = "0.3.17", default-features = false }
speedate = "0.14.4"
thiserror = "1.0.64"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }
wildmatch = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.15"
assert_fs = "1.1.2"
predicates = { version = "3.1.2", features = ["regex"] }
serial_test = "3.1.1"
